exports[`ScheduleDetail should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Schedule Call
    </Text>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <View
    style={
      Object {
        "flex": 0.7,
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 0.6,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          DATE
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="date">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#f77040",
                      },
                    ],
                  ]
                }>
                Add date
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0.4,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          TIME
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="time">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#f77040",
                      },
                    ],
                  ]
                }>
                Add time
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          ACTIVITY
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="activity">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#f77040",
                      },
                    ],
                  ]
                }>
                Add Activity (Optional)
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
  </View>
  <View
    style={
      Object {
        "flex": 0.3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 5,
            "justifyContent": "center",
            "marginHorizontal": 16,
            "paddingBottom": 17,
            "paddingTop": 15,
          },
          Object {
            "backgroundColor": "#f77040",
          },
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#dfe5e6",
            },
            undefined,
          ],
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Brandon Text_bold",
                "fontSize": 13,
                "fontWeight": "bold",
                "letterSpacing": 1,
              },
              Object {
                "color": "#ffffff",
              },
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ],
            ],
          ]
        }>
        SCHEDULE CALL
      </Text>
    </View>
  </View>
</View>
`;

exports[`ScheduleDetail should render date collision error feedback 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Schedule Call
    </Text>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <View
    style={
      Object {
        "flex": 0.7,
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 0.6,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          DATE
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="date">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      false,
                    ],
                  ]
                }>
                Thu, 22 Sep 16
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0.4,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          TIME
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="time">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      false,
                    ],
                  ]
                }>
                4:31 pm
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "color": "#864a47",
            "fontSize": 13,
          },
        ]
      }>
      You already have a call on this day
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          ACTIVITY
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="activity">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#f77040",
                      },
                    ],
                  ]
                }>
                Add Activity (Optional)
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
  </View>
  <View
    style={
      Object {
        "flex": 0.3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 5,
            "justifyContent": "center",
            "marginHorizontal": 16,
            "paddingBottom": 17,
            "paddingTop": 15,
          },
          Object {
            "backgroundColor": "#f77040",
          },
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#dfe5e6",
            },
            undefined,
          ],
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Brandon Text_bold",
                "fontSize": 13,
                "fontWeight": "bold",
                "letterSpacing": 1,
              },
              Object {
                "color": "#ffffff",
              },
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ],
            ],
          ]
        }>
        SCHEDULE CALL
      </Text>
    </View>
  </View>
</View>
`;

exports[`ScheduleDetail should render past time error feedback 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Schedule Call
    </Text>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <View
    style={
      Object {
        "flex": 0.7,
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 0.6,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          DATE
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="date">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      false,
                    ],
                  ]
                }>
                Tue, 27 Sep 16
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0.4,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          TIME
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="time">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      false,
                    ],
                  ]
                }>
                10:50 am
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "color": "#864a47",
            "fontSize": 13,
          },
        ]
      }>
      This date and time have already passed
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          ACTIVITY
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="activity">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#f77040",
                      },
                    ],
                  ]
                }>
                Add Activity (Optional)
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
  </View>
  <View
    style={
      Object {
        "flex": 0.3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 5,
            "justifyContent": "center",
            "marginHorizontal": 16,
            "paddingBottom": 17,
            "paddingTop": 15,
          },
          Object {
            "backgroundColor": "#f77040",
          },
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#dfe5e6",
            },
            undefined,
          ],
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Brandon Text_bold",
                "fontSize": 13,
                "fontWeight": "bold",
                "letterSpacing": 1,
              },
              Object {
                "color": "#ffffff",
              },
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ],
            ],
          ]
        }>
        SCHEDULE CALL
      </Text>
    </View>
  </View>
</View>
`;

exports[`ScheduleDetail should render the activity title if an activity is given 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Schedule Call
    </Text>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <View
    style={
      Object {
        "flex": 0.7,
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 0.6,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          DATE
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="date">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#f77040",
                      },
                    ],
                  ]
                }>
                Add date
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0.4,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          TIME
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="time">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#f77040",
                      },
                    ],
                  ]
                }>
                Add time
              </Text>
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 24,
          "marginRight": 24,
        }
      }>
      <View
        style={
          Object {
            "flex": 1,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "marginBottom": 9,
                  "textAlign": "left",
                },
                undefined,
              ],
            ]
          }>
          ACTIVITY
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="activity">
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#003035",
                      "fontFamily": "Brandon Text",
                    },
                    Object {
                      "fontSize": 13,
                      "textAlign": "center",
                    },
                    Array [
                      Object {
                        "color": "#003035",
                        "flex": 1,
                        "fontSize": 20,
                        "textAlign": "left",
                      },
                      false,
                    ],
                  ]
                }>
                Activity 3
              </Text>
            </View>
          </TouchableNativeFeedback>
          <TouchableNativeFeedback
            onPress={[Function]}
            uid="removeActivity">
            <View
              style={
                Object {
                  "alignItems": "center",
                  "padding": 2,
                }
              }>
              <Image
                source={1}
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                    Object {
                      "flex": -1,
                      "height": 18,
                      "resizeMode": "contain",
                      "width": 18,
                    },
                  ]
                } />
            </View>
          </TouchableNativeFeedback>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#e5e5e5",
          "borderBottomWidth": 1,
          "marginBottom": 44,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 44,
        }
      } />
  </View>
  <View
    style={
      Object {
        "flex": 0.3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 5,
            "justifyContent": "center",
            "marginHorizontal": 16,
            "paddingBottom": 17,
            "paddingTop": 15,
          },
          Object {
            "backgroundColor": "#f77040",
          },
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#dfe5e6",
            },
            undefined,
          ],
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontFamily": "Brandon Text_bold",
                "fontSize": 13,
                "fontWeight": "bold",
                "letterSpacing": 1,
              },
              Object {
                "color": "#ffffff",
              },
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ],
            ],
          ]
        }>
        SCHEDULE CALL
      </Text>
    </View>
  </View>
</View>
`;
